5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4146/executions/1836_2602.log
== TEST (2019-06-25 10:43:36) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array(eval(input("Quantidade: ")))
qtd = array([[2,1,2], [1,2,3], [4,0,2]])

alimento = alimento.T

existir = dor(inv(qtd),alimeto)

print("estafilococo: ", round(existir[0]), 1)
print("salmonela: ", round(existir[1]), 1)
print("coli: ", round(existir[2]), 1)

if(existir[0] == min(existir)):
	print("estafilococo")
elif(existir[1] == min(existir)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:43:56) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array(eval(input("Quantidade: ")))
qtd = array([[2,1,2], [1,2,3], [4,0,2]])

alimento = alimento.T

existir = dot(inv(qtd),alimeto)

print("estafilococo: ", round(existir[0]), 1)
print("salmonela: ", round(existir[1]), 1)
print("coli: ", round(existir[2]), 1)

if(existir[0] == min(existir)):
	print("estafilococo")
elif(existir[1] == min(existir)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:44:13) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array(eval(input("Quantidade: ")))
qtd = array([[2,1,2], [1,2,3], [4,0,2]])

alimento = alimento.T

existir = dot(inv(qtd),alimento)

print("estafilococo: ", round(existir[0]), 1)
print("salmonela: ", round(existir[1]), 1)
print("coli: ", round(existir[2]), 1)

if(existir[0] == min(existir)):
	print("estafilococo")
elif(existir[1] == min(existir)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:44:44) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array(eval(input("Quantidade: ")))
qtd = array([[2,1,2], [1,2,3], [4,0,2]])

alimento = alimento.T

existir = dot(qtd,alimento)

print("estafilococo: ", round(existir[0]), 1)
print("salmonela: ", round(existir[1]), 1)
print("coli: ", round(existir[2]), 1)

if(existir[0] == min(existir)):
	print("estafilococo")
elif(existir[1] == min(existir)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:45:23) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array(eval(input("Quantidade: ")))
qtd = array([[2,1,2], [1,2,3], [4,0,2]])

alimento = alimento.T

existir = dot(qtd,alimento)

print("estafilococo: ", round((existir[0]), 1))
print("salmonela: ", round((existir[1]), 1))
print("coli: ", round((existir[2]), 1))

if(existir[0] == min(existir)):
	print("estafilococo")
elif(existir[1] == min(existir)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:45:39) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array(eval(input("Quantidade: ")))
qtd = array([[2,1,2], [1,2,3], [4,0,2]])

alimento = alimento.T

existir = dot(inv(qtd),alimento)

print("estafilococo: ", round((existir[0]), 1))
print("salmonela: ", round((existir[1]), 1))
print("coli: ", round((existir[2]), 1))

if(existir[0] == min(existir)):
	print("estafilococo")
elif(existir[1] == min(existir)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:46:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array(eval(input("Quantidade: ")))
qtd = array([[2,1,2], [1,2,3], [4,0,2]])
qtd = qtd.t
#alimento = alimento.T

existir = dot(qtd,inv(alimento))

print("estafilococo: ", round((existir[0]), 1))
print("salmonela: ", round((existir[1]), 1))
print("coli: ", round((existir[2]), 1))

if(existir[0] == min(existir)):
	print("estafilococo")
elif(existir[1] == min(existir)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:46:36) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array(eval(input("Quantidade: ")))
qtd = array([[2,1,2], [1,2,3], [4,0,2]])
qtd = qtd.T
#alimento = alimento.T

existir = dot(qtd,inv(alimento))

print("estafilococo: ", round((existir[0]), 1))
print("salmonela: ", round((existir[1]), 1))
print("coli: ", round((existir[2]), 1))

if(existir[0] == min(existir)):
	print("estafilococo")
elif(existir[1] == min(existir)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:46:47) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array(eval(input("Quantidade: ")))
qtd = array([[2,1,2], [1,2,3], [4,0,2]])
qtd = qtd.T
#alimento = alimento.T

existir = dot(qtd,inv(alimento))

print("estafilococo: ", round((existir[0]), 1))
print("salmonela: ", round((existir[1]), 1))
print("coli: ", round((existir[2]), 1))

if(existir[0] == min(existir)):
	print("estafilococo")
elif(existir[1] == min(existir)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:47:08) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array(eval(input("Quantidade: ")))
qtd = array([[2,1,2], [1,2,3], [4,0,2]])

alimento = alimento.T

existir = dot(inv(qtd),alimento)

print("estafilococo: ", round((existir[0]), 1))
print("salmonela: ", round((existir[1]), 1))
print("coli: ", round((existir[2]), 1))

if(existir[0] == min(existir)):
	print("estafilococo")
elif(existir[1] == min(existir)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 10:48:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array(eval(input("Quantidade: ")))
qtd = array([[2,1,2], [1,2,3], [4,0,2]])

alimento = alimento.T

existir = dot(inv(qtd),alimento)

print("estafilococo: ", round((existir[0]), 1))
print("salmonela: ", round((existir[1]), 1))
print("coli: ", round((existir[2]), 1))

if(existir[0] == min(existir)):
	print("estafilococo")
elif(existir[1] == min(existir)):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.19604
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  -2023.0
salmonela:  -8652.9
coli:  8327.0
salmonela
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -3312.3
salmonela:  -15824.3
coli:  12272.2
salmonela
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  12653.5
salmonela:  31251.1
coli:  -23981.0
coli
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:48:14) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array(eval(input("Quantidade: ")))
qtd = array([[2,1,2], [1,2,3], [4,0,2]])

alimento = alimento.T

existir = dot(inv(qtd),alimento)

print("estafilococo: ", round((existir[0]), 1))
print("salmonela: ", round((existir[1]), 1))
print("coli: ", round((existir[2]), 1))

if(existir[0] == min(existir)):
	print("estafilococo")
elif(existir[1] == min(existir)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:49:02) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array(eval(input("Quantidade: ")))
qtd = array([[2,1,2], [1,2,3], [4,0,2]])

alimento = alimento.T

existir = dot(inv(qtd),alimento)

print("estafilococo: ", round((existir[0]), 1))
print("salmonela: ", round((existir[1]), 1))
print("coli: ", round((existir[2]), 1))

if(existir[0] == min(existir)):
	print("estafilococo")
elif(existir[1] == min(existir)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:49:36) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array(eval(input("Quantidade: ")))
qtd = array([[2,1,2], [1,2,3], [4,0,2]])

alimento = alimento.T

existir = dot(qtd,alimento)

print("estafilococo: ", round((existir[0]), 1))
print("salmonela: ", round((existir[1]), 1))
print("coli: ", round((existir[2]), 1))

if(existir[0] == min(existir)):
	print("estafilococo")
elif(existir[1] == min(existir)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 10:49:45) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array(eval(input("Quantidade: ")))
qtd = array([[2,1,2], [1,2,3], [4,0,2]])

alimento = alimento.T

existir = dot(qtd,alimento)

print("estafilococo: ", round((existir[0]), 1))
print("salmonela: ", round((existir[1]), 1))
print("coli: ", round((existir[2]), 1))

if(existir[0] == min(existir)):
	print("estafilococo")
elif(existir[1] == min(existir)):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.04973
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  30687.3
salmonela:  40946.6
coli:  32945.4
estafilococo
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  28637.2
salmonela:  39692.6
coli:  30972.5
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  25709.2
salmonela:  22977.8
coli:  39688.8
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:49:46) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array(eval(input("Quantidade: ")))
qtd = array([[2,1,2], [1,2,3], [4,0,2]])

alimento = alimento.T

existir = dot(qtd,alimento)

print("estafilococo: ", round((existir[0]), 1))
print("salmonela: ", round((existir[1]), 1))
print("coli: ", round((existir[2]), 1))

if(existir[0] == min(existir)):
	print("estafilococo")
elif(existir[1] == min(existir)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:53:41) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array(eval(input("Quantidade: ")))
qtd = array([[2,1,2], [1,2,3], [4,0,2]])

alimento = alimento.T

existir = dot(inv(qtd),alimento)

print("estafilococo: ", round((existir[0]), 1))
print("salmonela: ", round((existir[1]), 1))
print("coli: ", round((existir[2]), 1))

if(existir[0] == min(existir)):
	print("estafilococo")
elif(existir[1] == min(existir)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:56:18) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array(eval(input("Quantidade: ")))
qtd = array([2,1,2], [1,2,3], [4,0,2])

alimento = alimento.T

existir = dot(inv(qtd),alimento)

print("estafilococo: ", round((existir[0]), 1))
print("salmonela: ", round((existir[1]), 1))
print("coli: ", round((existir[2]), 1))

if(existir[0] == min(existir)):
	print("estafilococo")
elif(existir[1] == min(existir)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:57:03) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array(eval(input("Quantidade: ")))
qtd = array([[2,1,2], [1,2,3], [4,0,2]])

existir = dot(inv(qtd),alimento.T

print("estafilococo: ", round((existir[0]), 1))
print("salmonela: ", round((existir[1]), 1))
print("coli: ", round((existir[2]), 1))

if(existir[0] == min(existir)):
	print("estafilococo")
elif(existir[1] == min(existir)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
File "XXXX", line 9
    print("estafilococo: ", round((existir[0]), 1))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:57:10) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array(eval(input("Quantidade: ")))
qtd = array([[2,1,2], [1,2,3], [4,0,2]])

existir = dot(inv(qtd),alimento.T)

print("estafilococo: ", round((existir[0]), 1))
print("salmonela: ", round((existir[1]), 1))
print("coli: ", round((existir[2]), 1))

if(existir[0] == min(existir)):
	print("estafilococo")
elif(existir[1] == min(existir)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:59:10) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array(eval(input("Quantidade: ")))
qtd = array([[2,1,2], [1,2,3], [4,0,2]])

num = dot(inv(qtd),alimento.T)

print("estafilococo: ", round((num[0]), 1))
print("salmonela: ", round((num[1]), 1))
print("coli: ", round((num[2]), 1))

if(num[0] == min(num)):
	print("estafilococo")
elif(num[1] == min(num)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:01:10) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array(eval(input("Quantidade: ")))
qtd = array([[2,1,4], [1,2,0], [2,3,2]])

num = dot(inv(qtd),alimento.T)

print("estafilococo: ", round((num[0]), 1))
print("salmonela: ", round((num[1]), 1))
print("coli: ", round((num[2]), 1))

if(num[0] == min(num)):
	print("estafilococo")
elif(num[1] == min(num)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:01:18) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array(eval(input("Quantidade: ")))
qtd = array([[2,1,4], [1,2,0], [2,3,2]])

num = dot(inv(qtd),alimento.T)

print("estafilococo: ", round((num[0]), 1))
print("salmonela: ", round((num[1]), 1))
print("coli: ", round((num[2]), 1))

if(num[0] == min(num)):
	print("estafilococo")
elif(num[1] == min(num)):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.01837
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
